--- a/style.css
+++ b/style.css
@@ -14,6 +14,11 @@
     src: url(fonts/Dream\ Orphans\ It.otf);
 }
 
+@font-face {
+    font-family: "ananda";
+    src: url(fonts/Ananda.ttf);
+}
+
 /* global styling */
 body{
     margin: 0px;
@@ -195,6 +200,14 @@ input:focus, textarea:focus {
     display: flex;
     align-items: center;
     flex-direction: column;
+
+    h1 {
+        font-family: "ananda";
+        font-style: normal;
+        font-size: 4vw;
+        margin-bottom: 0px;
+        margin-top: 3vh;
+    }
 }
 
 /* Books grid */
