--- a/style.css
+++ b/style.css
@@ -202,8 +202,14 @@ input:focus, textarea:focus {
 #main-page {
     margin-left: 20vw;
     display: flex;
+    min-height: 100vh;
     align-items: center;
     flex-direction: column;
+    background-image: url(assets/library-background.jpg);
+    background-repeat: no-repeat;
+    background-attachment: fixed;
+    background-size: cover;
+    height: cover 100vh;
 
     h1 {
         font-family: "ananda";
